# template-switch-error-free-inners

./: Cargo.toml  README.md
.github/workflows/: ci.yml
src/: lib.rs  tests.rs
