[package]
name = "template-switch-error-free-inners"
description = "Find error-free template switch inners of minimum length."
authors = ["Sebastian Schmidt <sebastian.schmidt@helsinki.fi>"]
version = "0.1.1"
edition = "2024"
license = "BSD-2-Clause"
repository = "https://github.com/sebschmi/template-switch-error-free-inners"

[dependencies]
compact-genome = "12.3.0"
traitsequence = "8.1.2"
suffix = "1.3.0"
bitvec = "1.0.1"
log = "0.4.27"
